--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "build": "npm run build-ts && npm run tslint",
     "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Express\" -c \"cyan.bold,green.bold\" \"npm run watch-ts\" \"npm run serve\"",
     "serve": "cross-env DEBUG=ts-express:* nodemon bin/www",
-    "build-ts": "tsc -p src",
-    "watch-ts": "tsc -w -p src",
-    "test": "cross-env NODE_ENV=test TS_NODE_PROJECT=test mocha --reporter spec --compilers ts:ts-node/register -r tsconfig-paths/register test/unit/**/*.test.ts",
+    "build-ts": "tsc -p ./",
+    "watch-ts": "tsc -w -p ./",
     "migrate": "knex migrate:latest"
   },
   "repository": {
@@ -28,37 +27,31 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
-    "bookshelf": "^0.15.1",
+    "debug": "^4.1.1",
     "dotenv": "^8.0.0",
     "eslint-plugin-react": "^7.14.2",
     "express": "^4.15.4",
+    "express-promise-router": "^3.0.3",
     "knex": "^0.19.0",
     "lusca": "^1.5.1",
     "morgan": "^1.8.2",
+    "objection": "^1.6.9",
     "pg": "^7.11.0",
-    "validatorjs": "^3.13.5",
-    "debug": "^4.1.1"
+    "validatorjs": "^3.13.5"
   },
   "devDependencies": {
     "@divyenduz/ts-graphql-plugin": "^0.1.0",
     "@types/body-parser": "^1.16.5",
-    "@types/bookshelf": "^0.13.2",
-    "@types/chai": "^4.0.4",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^4.0.37",
     "@types/knex": "0.16.1",
-    "@types/mocha": "^5.2.7",
+    "@types/lusca": "^1.6.0",
     "@types/morgan": "^1.7.32",
     "@types/node": "^12.6.2",
-    "@types/react": "^16.8.23",
-    "@types/react-helmet-async": "^1.0.0",
     "@types/styled-components": "^4.1.16",
-    "@types/supertest": "^2.0.3",
-    "@types/typography": "^0.16.2",
     "@types/validatorjs": "^3.7.0",
     "@typescript-eslint/eslint-plugin": "^1.11.0",
     "@typescript-eslint/parser": "^1.12.0",
-    "chai": "^4.1.2",
     "concurrently": "^4.1.1",
     "cross-env": "^5.0.5",
     "eslint": "^5.16.0",
@@ -68,12 +61,8 @@
     "eslint-plugin-import": "^2.18.0",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-prettier": "^3.1.0",
-    "mocha": "^6.1.4",
-    "mock-knex": "^0.4.6",
     "nodemon": "^1.12.1",
     "prettier": "^1.18.2",
-    "supertest": "^4.0.2",
-    "ts-node": "^8.3.0",
     "tsconfig-paths": "^3.8.0",
     "typescript": "^3.5.3"
   }
